# portfolio

./: .gitignore  README.md  docker-compose.yaml
Docker/apollo_server/: Dockerfile
Docker/article_server/: Dockerfile
Docker/frontend/: Dockerfile
apollo-server/: package-lock.json  package.json
apollo-server/src/: index.ts  test_data.ts
apollo_server/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
apollo_server/prisma/: schema.prisma
apollo_server/src/: apollo_util.ts  app.module.ts  index.ts  schema.gql
apollo_server/src/articles/: articles.module.ts  articles.resolver.ts  articles.service.ts
article_server/: main.py  pyproject.toml
article_server/article_server/: db.py  getArticle.py  types.py
article_server/tests/: test_article_server.py
frontend/: .eslintrc.json  .gitignore  apollo.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  styled-jsx.d.ts  tailwind.config.js  tsconfig.json
frontend/app/: global.css  head.tsx  layout.tsx  page.tsx
frontend/app/articles/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/works/: page.tsx
frontend/components/: header.tsx
frontend/components/articles/: card.tsx  cards.tsx  pagenation.tsx
frontend/graphql/: context.ts  resolver.ts  schema.ts
frontend/graphql/types/: blog.ts
frontend/lib/: getArticles.tsx
frontend/libs/: apollo.ts  prisma.ts
frontend/pages/: _app.tsx  blogs.tsx  index.tsx
frontend/pages/api/: graphql.ts
frontend/prisma/: seed.ts
frontend/src/: index.ts
frontend/styles/: globals.tsx
frontend/ui/profile/: imfo.tsx
(+5 files in other folders)
